# openrgb-profiles

./: main.py  pyproject.toml  run.sh
